improving navbar removing 'sticky' class styles navbar position is fixed so heroimage visible underneath

--- a/styles.css
+++ b/styles.css
@@ -47,12 +47,19 @@ body{
 /* Navbar styles */
 
 .nav-wrapper {
+    background: rgba(0,0,0,0.1);
+    transition: background 0.5s;
+    transition:  0.5s;
+    z-index: 2;
+    position: fixed;  /* Using fixed so that hero image is seen under non-opaque navbar */
+    width: 100%;
+}
+
+.nav-container{
     display: flex;
     justify-content: space-between;
     padding: 30px;
-    background: rgba(0,0,0,0.1);
-    transition: background 0.5s;
-    position: relative;
+    transition: padding 0.5s;
 }
 
 .nav-wrapper:hover{
@@ -63,9 +70,8 @@ body{
     display: flex;
 }
 
-.nav-wrapper > .left-side > div {
+.nav-wrapper .nav-container .left-side > div{
     margin-right: 20px;
-    
     text-transform: uppercase;
 }
 
@@ -93,9 +99,8 @@ body{
     color: white;
 }
 
-.nav-wrapper .right-side a {
+.nav-wrapper .nav-container .right-side a {
     margin-right: 20px;
-    
     text-transform: uppercase;
     color: white;
 }
@@ -144,18 +149,6 @@ body{
 .dropdown:hover .dropdown-content {
     display: block;
 }
-
-.sticky{
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-/* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
-.sticky + .content {
-    padding-top: 60px;
-}
-
 
 /* Hero Image styles*/
 
@@ -220,6 +213,8 @@ body{
 
 .cv-sections{
     max-width: 1400px;
+    position: relative;
+    z-index: 1;
 }
 
 /* Summary Styles */
@@ -307,6 +302,7 @@ body{
     border: 2px solid #0bb5f4;
     background-color: #fff;
     opacity: 1;
+    z-index: 1;
 }
 
 
@@ -529,6 +525,10 @@ if no 'space-between' then image will not be stay right if not enough text on le
     line-height: 32px;
 }
 
+.interest-images{
+    position: relative;
+}
+
 @media (min-width: 900px) {
     .interest-images{
         display: grid;
@@ -538,21 +538,24 @@ if no 'space-between' then image will not be stay right if not enough text on le
 }
 
 .interest-images .interest-image-wrapper{
-    display: block;
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    z-index: 1;
 }
 
 .interest-images .interest-image-wrapper img{
     width: 100%;
-    height: auto;
+    height: 100%;
     filter: grayscale(100%);
-    transition: filter 0.5s;    
+    transition: filter 0.5s;  
+    z-index: 1;
+    position: relative;  
 }
 
 .interest-images .interest-image-wrapper img:hover{
-    filter: grayscale(0%);    
+    filter: grayscale(0%);
+    z-index: 1;
+    position: relative;     
 }
 
 @media (min-width: 900px) {
